--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: eatModel
 Type: Package
 Title: Educational Assessment Tools for IRT Modeling using Conquest or
         TAM
-Version: 0.6.25
+Version: 0.6.26
 Depends: R (>= 3.0.0), TAM, reshape2, parallel
 Imports: future, combinat, car, gdata, plyr, date, Hmisc, eatRep (>=
-        0.9.2), eatTools (>= 0.0.19), sirt (>= 1.12), devtools
-Remotes: weirichs/eatTools, weirichs/eatRep 
-Date: 2018-11-07
+        0.9.2), eatTools (>= 0.1.4), sirt (>= 1.12)
+Remotes: weirichs/eatTools, weirichs/eatRep
+Date: 2018-11-29
 Author: Sebastian Weirich, Martin Hecht
 Maintainer: Sebastian Weirich <sebastian.weirich@iqb.hu-berlin.de>
 Description: framework to run IRT models within R
@@ -15,4 +15,4 @@ License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
 NeedsCompilation: no
-Packaged: 2018-11-06 23:39:41 UTC; Sebastian Weirich
+Packaged: 2018-12-01 00:09:57 UTC; Sebastian Weirich
