--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,13 @@
 Package: eatModel
 Type: Package
-Title: Educational Assessment Tools for IRT Modeling using Conquest or
-        TAM
-Version: 0.6.35
+Title: Educational Assessment Tools for IRT Modeling using Conquest or TAM
+Version: 0.7.0
 Depends: R (>= 3.0.0), TAM, reshape2, parallel
-Imports: future, combinat, car, gdata, plyr, date, Hmisc, eatRep (>=
-        0.9.2), eatTools (>= 0.1.4), sirt (>= 1.12)
-Remotes: weirichs/eatTools, weirichs/eatRep
-Date: 2019-02-25
+Imports: future, combinat, car, gdata, plyr, date, Hmisc, eatRep (>= 0.9.2), eatTools (>= 0.1.4), sirt (>= 1.12)
+Date: 2019-02-28
 Author: Sebastian Weirich, Martin Hecht
 Maintainer: Sebastian Weirich <sebastian.weirich@iqb.hu-berlin.de>
 Description: framework to run IRT models within R
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
-NeedsCompilation: no
-Packaged: 2018-12-01 00:09:57 UTC; Sebastian Weirich
