--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,19 +1,17 @@
 importFrom("grDevices", dev.off, pdf)
-importFrom("graphics", lines, mtext, plot, points)
-importFrom("stats", as.formula, cor, cov2cor, dnorm,
-             model.matrix, na.omit, qnorm, quantile, rnorm)
-importFrom("utils", capture.output, flush.console, memory.limit,
-             write.csv2, write.table)
+importFrom("graphics", abline, lines, mtext, plot, points)
+importFrom("stats", as.formula, cor, cov2cor, dnorm, model.matrix, na.omit, qnorm, quantile, rnorm)
+importFrom("utils", capture.output, flush.console, memory.limit, write.csv2, write.table)
 importFrom("future", makeClusterPSOCK)
 importFrom("car", recode)
 importFrom("gdata", write.fwf)
 importFrom("plyr", rbind.fill, alply)
 importFrom("date", as.date)
-importFrom("Hmisc", wtd.table)
 importFrom("sirt", equating.rasch, equating.rasch.jackknife, Q3)
 importFrom("combinat", combn)
 importFrom("eatRep", jk2.mean)
-importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, item.logit, num.to.cat)
+importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, item.logit, num.to.cat, tablePattern)
+importFrom("devtools", session_info)
 import(TAM)
 import(reshape2)
 import(parallel)
@@ -42,3 +40,4 @@ export(plotICC)
 # export(replSpecSign)
 # export(finalizeItemtable)
 export(checkDesign)
+export(plotDevianceConquest)
