--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,4 @@ Description: framework to run IRT models within R
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
+Remotes: weirichs/eatTools, weirichs/eatRep
