--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: eatModel
 Type: Package
 Title: Educational Assessment Tools for IRT Modeling using Conquest or TAM
-Version: 0.7.2-05
+Version: 0.7.3
 Depends: R (>= 3.0.0), TAM, reshape2, parallel
 Imports: future, combinat, car, gdata, plyr, date, eatRep (>= 0.9.2), eatTools (>= 0.1.4), sirt (>= 1.12), devtools (>= 2.0)
-Date: 2019-04-12
+Date: 2019-05-12
 Author: Sebastian Weirich, Martin Hecht
 Maintainer: Sebastian Weirich <sebastian.weirich@iqb.hu-berlin.de>
 Description: framework to run IRT models within R
