--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,8 @@ importFrom("date", as.date)
 importFrom("sirt", equating.rasch, equating.rasch.jackknife, Q3)
 importFrom("combinat", combn)
 importFrom("eatRep", jk2.mean)
-importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, item.logit, num.to.cat, tablePattern)
+importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, num.to.cat, tablePattern)
+importFrom("irtoys", wle)
 importFrom("devtools", session_info)
 import(TAM)
 import(reshape2)
