--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Educational Assessment Tools for IRT Modeling using Conquest or TAM
 Version: 0.7.8
 Depends: R (>= 3.0.0), TAM, reshape2, parallel
-Imports: future, combinat, car, gdata, plyr, date, eatRep (>= 0.9.2), eatTools (>= 0.1.4), sirt (>= 1.12), devtools (>= 2.0)
-Date: 2019-11-18
+Imports: future, combinat, car, gdata, plyr, date, eatRep (>= 0.9.2), eatTools (>= 0.1.4), sirt (>= 1.12), devtools (>= 2.0), irtoys
+Date: 2019-11-22
 Author: Sebastian Weirich, Martin Hecht
 Maintainer: Sebastian Weirich <sebastian.weirich@iqb.hu-berlin.de>
 Description: framework to run IRT models within R
