--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ importFrom("car", recode)
 importFrom("gdata", write.fwf)
 importFrom("plyr", rbind.fill, alply)
 importFrom("date", as.date)
-importFrom("sirt", equating.rasch, equating.rasch.jackknife, Q3, linking.robust)
+importFrom("sirt", equating.rasch, equating.rasch.jackknife, Q3, linking.robust, linking.haberman)
 importFrom("combinat", combn)
 importFrom("eatRep", jk2.mean)
 importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, num.to.cat, tablePattern)
