--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ importFrom("date", as.date)
 importFrom("sirt", equating.rasch, equating.rasch.jackknife, Q3, linking.robust, linking.haberman)
 importFrom("combinat", combn)
 importFrom("eatRep", jk2.mean)
-importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, num.to.cat, tablePattern)
+importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, num.to.cat, tablePattern, whereAre)
 importFrom("irtoys", wle)
 importFrom("devtools", session_info)
 import(TAM)
