--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,5 +40,5 @@ export(prepRep)
 export(plotICC)
 # export(replSpecSign)
 # export(finalizeItemtable)
-export(checkDesign)
+export(checkLinking)
 export(plotDevianceConquest)
