--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,8 @@ importFrom("eatRep", jk2.mean)
 importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, num.to.cat, tablePattern, whereAre)
 importFrom("irtoys", wle)
 importFrom("devtools", session_info)
+importFrom("reshape2", melt, dcast)
 import(TAM)
-import(reshape2)
 import(parallel)
 export(splitModels)
 export(defineModel)
