--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ importFrom("plyr", rbind.fill, alply)
 importFrom("date", as.date)
 importFrom("sirt", equating.rasch, equating.rasch.jackknife, Q3, linking.robust, linking.haberman)
 importFrom("combinat", combn)
-importFrom("eatRep", jk2.mean)
+importFrom("eatRep", repMean)
 importFrom("eatTools", existsBackgroundVariables, removePattern, facToChar, crop, tableUnlist, removeNumeric, removeNonNumeric, asNumericIfPossible, halveString, num.to.cat, tablePattern, whereAre)
 importFrom("irtoys", wle)
 importFrom("devtools", session_info)
