--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: eatModel
 Type: Package
 Title: Educational Assessment Tools for IRT Modeling using Conquest or TAM
-Version: 0.7.30
+Version: 0.7.32
 Depends: R (>= 3.0.0), TAM, parallel
-Imports: reshape2, future, combinat, car, gdata, plyr, date, eatRep (>= 0.9.2), eatTools (>= 0.3.1), sirt (>= 1.12), devtools (>= 2.0), irtoys
-Date: 2020-12-08
+Imports: reshape2, future, combinat, car, gdata, plyr, date, eatRep (>= 0.9.2), eatTools (>= 0.3.1), sirt (>= 1.12), devtools (>= 2.0), irtoys, Matrix
+Date: 2021-02-05
 Author: Sebastian Weirich, Martin Hecht
 Maintainer: Sebastian Weirich <sebastian.weirich@iqb.hu-berlin.de>
 Description: framework to run IRT models within R
