--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ Imports: reshape2, future, combinat, car, gdata, plyr, date, eatRep (>= 0.9.2), 
 Date: 2021-03-02
 Author: Sebastian Weirich, Martin Hecht
 Maintainer: Sebastian Weirich <sebastian.weirich@iqb.hu-berlin.de>
-Description: framework to run IRT models within R
+Description: Framework to run IRT models within R. Provide functions to prepare and run IRT models using Conquest or TAM. The results
+  can be imported and stored in a standardized manner. Several models can be estimated simultaneously using multicore processing. 
+  See the package documentation for further details. 
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
