--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,13 @@ Package: eatModel
 Type: Package
 Title: Educational Assessment Tools for IRT Modeling using Conquest or TAM
 Version: 0.7.39
-Depends: R (>= 3.0.0), TAM, parallel
+Depends: R (>= 3.5.0), TAM, parallel
 Imports: reshape2, future, combinat, car, gdata, plyr, date, eatRep (>= 0.9.2), eatTools (>= 0.3.1), sirt (>= 1.12), devtools (>= 2.0), irtoys, Matrix
 Date: 2021-10-20
-Author: Sebastian Weirich, Martin Hecht
+Authors@R: c(
+    person("Sebastian", "Weirich", email = "sebastian.weirich@iqb.hu-berlin.de", role = c("aut", "cre")),
+    person("Martin", "Hecht", role = c("aut")),
+    person("Karoline", "Sachse", role = c("aut")) )
 Maintainer: Sebastian Weirich <sebastian.weirich@iqb.hu-berlin.de>
 Description: Framework to run IRT models within R. Provide functions to prepare and run IRT models using Conquest or TAM. The results
   can be imported and stored in a standardized manner. Several models can be estimated simultaneously using multicore processing. 
