bugfix in tripleEquatError() and equat1p()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-importFrom("stats", as.formula, cor, cov2cor, dnorm, model.matrix, na.omit, qnorm, quantile, rnorm)
+importFrom("stats", as.formula, cor, cov2cor, dnorm, model.matrix, na.omit, qnorm, quantile, rnorm, cov, var)
 importFrom("utils", capture.output, flush.console, memory.limit, write.csv2, write.table)
 import(TAM)
 import(parallel)
