--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-importFrom("stats", as.formula, cor, cov2cor, dnorm, model.matrix, na.omit, qnorm, quantile, rnorm, cov, var)
+importFrom("stats", as.formula, cor, cov2cor, dnorm, model.matrix, na.omit, qnorm, quantile, rnorm, cov, var, pnorm)
 importFrom("utils", capture.output, flush.console, memory.limit, write.csv2, write.table)
 import(TAM)
 import(parallel)
@@ -32,3 +32,4 @@ export(wleRelFromRes)
 export(eapRelFromRes)
 export(multiEquatError)
 export(replaceLinkingError)
+export(regcoefFromRes)
