--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 importFrom("stats", as.formula, cor, cov2cor, dnorm, model.matrix, na.omit, qnorm, quantile, rnorm, cov, var, pnorm)
 importFrom("utils", capture.output, flush.console, memory.limit, write.csv2, write.table)
+importFrom("dplyr", full_join)
 import(TAM)
 import(parallel)
 export(splitModels)
