--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,3 +34,4 @@ export(multiEquatError)
 export(replaceLinkingError)
 export(regcoefFromRes)
 export(checkContextVars)
+export(compareDefineModelObjects)
