add seed argument in getResults (for infit computation)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,3 +35,4 @@ export(replaceLinkingError)
 export(regcoefFromRes)
 export(checkContextVars)
 export(compareDefineModelObjects)
+export(correlationFromRes)
