--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: eatModel
 Type: Package
 Title: Educational Assessment Tools for IRT Modeling using Conquest or TAM
-Version: 0.8.35
+Version: 0.8.36
 Depends: R (>= 4.0), TAM, parallel
-Imports: reshape2, future, combinat, car, gdata, plyr, date, eatRep (>= 0.12.0), eatTools (>= 0.7.4), sirt (>= 1.12), devtools (>= 2.0), irtoys, Matrix, graphics, checkmate, ps, cli
-Date: 2024-09-04
+Imports: reshape2, future, combinat, car, gdata, plyr, date, eatRep (>= 0.12.0), eatTools (>= 0.7.7), sirt (>= 1.12), devtools (>= 2.0), irtoys, Matrix, graphics, checkmate, ps, cli
+Date: 2024-10-04
 Authors@R: c(
     person("Sebastian", "Weirich", email = "sebastian.weirich@iqb.hu-berlin.de", role = c("aut", "cre")),
     person("Martin", "Hecht", role = c("aut")),
@@ -14,5 +14,9 @@ Description: Framework to run IRT models within R. Provide functions to prepare 
   can be imported and stored in a standardized manner. Several models can be estimated simultaneously using multicore processing. 
   See the package documentation for further details. 
 License: GPL (>= 2)
+Encoding: UTF-8
+URL: https://github.com/weirichs/eatModel
+Remotes:
+    weirichs/eatTools
 LazyLoad: yes
 LazyData: yes
