partial credit with TAM and mirt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ importFrom("stats", as.formula, cor, cov2cor, dnorm, model.matrix, na.omit, qnor
 importFrom("utils", capture.output, flush.console, memory.limit, write.csv2, write.table)
 import(TAM)
 import(parallel)
+importFrom("Hmisc",`%nin%`)
 export(splitModels)
 export(defineModel)
 export(runModel)
@@ -35,3 +36,4 @@ export(regcoefFromRes)
 export(checkContextVars)
 export(compareDefineModelObjects)
 export(correlationFromRes)
+export(plotDevianceMirt)
