--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: eatModel
 Type: Package
 Title: Educational Assessment Tools for IRT Modeling using Conquest or TAM
-Version: 0.9.6
-Depends: R (>= 4.1), TAM, parallel
-Imports: reshape2, future, combinat, car, gdata, plyr, eatRep (>= 0.12.0), eatTools (>= 0.7.8), sirt (>= 1.12), devtools (>= 2.0), irtoys, Matrix, graphics, checkmate, ps, cli, stringr, tidyr, dplyr, Rfast, benchmarkme
-Date: 2025-08-25
+Version: 0.10.3
+Depends: R (>= 4.1), TAM, parallel, mirt
+Imports: reshape2, future, combinat, car, gdata, plyr, eatRep (>= 0.12.0), eatTools (>= 0.7.9), sirt (>= 1.12), devtools (>= 2.0), irtoys, Matrix, graphics, checkmate, ps, cli, stringr, tidyr, dplyr, Rfast, benchmarkme, Hmisc, tidyselect
+Date: 2025-11-11
 Authors@R: c(
     person("Sebastian", "Weirich", email = "sebastian.weirich@iqb.hu-berlin.de", role = c("aut", "cre")),
     person("Martin", "Hecht", role = c("aut")),
